<resources>
    <string name="app_name">Weather</string>
    <string name="header_app_name">Mobilization.Weather</string>

    <string name="app_description">Another cool weather application.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="nav_title_weather_fragment">Weather</string>
    <string name="nav_title_settings_fragment">Settings</string>
    <string name="nav_title_about_fragment">About</string>

    <!--Weather-->

    <string name="weather_info_title_pressure">Pressure</string>
    <string name="weather_info_title_humidity">Humidity</string>
    <string name="weather_info_title_cloudiness">Cloudiness</string>

    <string name="city_chooser_hint_city_name">City name</string>
    <string name="citychooser_header_current_city">Current city</string>
    <string name="citychooser_header_add_city">Add city</string>

    <!--Preferences -->

    <string name="pref_units_title">Units</string>
    <string name="pref_service_title">Weather auto-update</string>
    <string name="pref_service_enabled_title">Enabled</string>
    <string name="pref_service_interval_title">Update interval</string>

    <string name="pref_last_city_id_key">last_city_id</string>
    <string name="pref_units_key">units</string>
    <string name="pref_service_enabled_key">service_enabled</string>
    <string name="pref_service_interval_key">service_interval</string>

    <string name="pref_last_city_id_default">524901</string>
    <string name="pref_units_default">metric</string>
    <string name="pref_service_interval_default">120</string>

    <string name="pref_current_city_id">current_city_id</string>
    <string name="pref_current_city_name">current_city_name</string>
    <string name="pref_current_city_country_name">current_city_country_name</string>
    <string name="pref_current_city_lng">current_city_lng</string>
    <string name="pref_current_city_lat">current_city_lat</string>

    <string name="api_language_value">en</string>

    <string name="default_city">Moscow</string>
    <string name="default_country">Russia</string>


</resources>
