<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    >

    <ImageView
        android:id="@+id/weather_imageview_condition"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/ic_all_clear"
        app:layout_constraintBottom_toBottomOf="@+id/weather_textview_temperature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/weather_textview_temperature"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        />

    <TextView
        android:id="@+id/weather_textview_temperature"
        style="@style/AppTheme.Weather.Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="64sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="+24"
        />

    <TextView
        android:id="@+id/weather_textview_condition"
        style="@style/AppTheme.Weather.Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weather_textview_temperature"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="Thunderstorms"
        />

    <TextView
        android:id="@+id/weather_info_title_pressure"
        style="@style/AppTheme.Weather.Info.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/weather_info_title_pressure"
        app:layout_constraintBottom_toBottomOf="@+id/weather_info_image_pressure"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weather_info_image_pressure"
        app:layout_constraintTop_toTopOf="@+id/weather_info_image_pressure"
        app:layout_constraintVertical_bias="0.49"
        />

    <ImageView
        android:id="@+id/weather_info_image_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weather_textview_condition"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_weather_info_pressure"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        />

    <TextView
        android:id="@+id/weather_info_value_pressure"
        style="@style/AppTheme.Weather.Info.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_info_image_pressure"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@+id/weather_info_image_pressure"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weather_info_image_pressure"
        app:layout_constraintVertical_bias="0.571"
        tools:text="1000"
        />


    <TextView
        android:id="@+id/weather_info_title_humidity"
        style="@style/AppTheme.Weather.Info.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/weather_info_title_humidity"
        app:layout_constraintBottom_toBottomOf="@+id/weather_info_image_humidity"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weather_info_image_humidity"
        app:layout_constraintTop_toTopOf="@+id/weather_info_image_humidity"
        app:layout_constraintVertical_bias="0.571"
        />

    <ImageView
        android:id="@+id/weather_info_image_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weather_info_image_pressure"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_weather_info_humidity"
        />

    <TextView
        android:id="@+id/weather_info_value_humidity"
        style="@style/AppTheme.Weather.Info.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_info_image_humidity"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@+id/weather_info_image_humidity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weather_info_image_humidity"
        app:layout_constraintVertical_bias="0.5"
        tools:text="1000"
        />

    <TextView
        android:id="@+id/weather_info_title_cloudiness"
        style="@style/AppTheme.Weather.Info.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/weather_info_title_cloudiness"
        app:layout_constraintBottom_toBottomOf="@+id/weather_info_image_cloudiness"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weather_info_image_cloudiness"
        app:layout_constraintTop_toTopOf="@+id/weather_info_image_cloudiness"
        app:layout_constraintVertical_bias="0.5"
        />

    <ImageView
        android:id="@+id/weather_info_image_cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weather_info_image_humidity"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_weather_info_clouds"
        />

    <TextView
        android:id="@+id/weather_info_value_cloudiness"
        style="@style/AppTheme.Weather.Info.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/weather_info_image_cloudiness"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@+id/weather_info_image_cloudiness"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weather_info_image_cloudiness"
        app:layout_constraintVertical_bias="0.5"
        tools:text="1000"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="0dp"
        />

</android.support.constraint.ConstraintLayout>